--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@
  * For more details take a look at the Java Libraries chapter in the Gradle
  * user guide available at https://docs.gradle.org/4.10.2/userguide/java_library_plugin.html
  */
+import static String.format
 
 plugins {
     // Apply the java-library plugin to add support for Java Library
